--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
     <h1>Practicing HTML</h1>
-    <p>I m 2 day behind.  I need to listen to the 2 days recording to cath up</p>
-    <a href=""
+    <p>I m 2 day behind.  I need to listen to the 2 days recording to cath up</p> 
+
+    <img src="IMG/teammember1.jpg">
+    <a href="team/teammember1.html">This is the page for teammember1</a>
+    <a href="http://www.google.com" target="_blank">Click here for google.com</a>
+
 </body>
 </html>
