--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Practicing HTML</h1>
-    <p>I m 2 day behind.  I need to listen to the 2 days recording to cath up</p> 
+    <p>I am 2 days behind.  I need to listen to the 2 days recording to cath up</p> 
 
     <img src="IMG/teammember1.jpg">
     <a href="team/teammember1.html">This is the page for teammember1</a>
